@@ -2,6 +2,7 @@ package com.inditex.inditex_technical_test.service.impl;
 
 import com.inditex.inditex_technical_test.dto.AlbumDTO;
 import com.inditex.inditex_technical_test.dto.ConfirmationDTO;
+import com.inditex.inditex_technical_test.exception.AlbumDataInternalServerErrorException;
 import com.inditex.inditex_technical_test.mapper.AlbumMapper;
 import com.inditex.inditex_technical_test.mapper.PhotoMapper;
 import com.inditex.inditex_technical_test.model.Album;
@@ -9,21 +10,22 @@ import com.inditex.inditex_technical_test.model.Photo;
 import com.inditex.inditex_technical_test.service.AlbumService;
 import com.inditex.inditex_technical_test.service.DataCollectionService;
 import com.inditex.inditex_technical_test.service.PhotoService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class DataCollectionServiceImpl implements DataCollectionService {
-    @Autowired
     AlbumService albumService;
-    @Autowired
     PhotoService photoService;
+
+    public DataCollectionServiceImpl(AlbumService albumService, PhotoService photoService) {
+        this.albumService = albumService;
+        this.photoService = photoService;
+    }
 
     @Override
     public Flux<AlbumDTO> getDataFromDatabase() {
@@ -33,12 +35,12 @@ public class DataCollectionServiceImpl implements DataCollectionService {
             return Flux.fromIterable(albumService.findAllAlbums().stream()
                     .map(album -> AlbumMapper.mapToAlbumDto(album,
                             photoService.findPhotosById(album.getId()).stream()
-                                    .map(photo -> PhotoMapper.mapToPhotoDto(photo))
-                                    .collect(Collectors.toList())))
-                    .collect(Collectors.toList()));
+                                    .map(PhotoMapper::mapToPhotoDto)
+                                    .toList()))
+                    .toList());
 
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            throw new AlbumDataInternalServerErrorException();
         }
 
     }
@@ -53,7 +55,7 @@ public class DataCollectionServiceImpl implements DataCollectionService {
             return Mono.just(new ConfirmationDTO(String.valueOf(HttpStatus.OK), HttpStatus.OK.name()));
 
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            throw new AlbumDataInternalServerErrorException();
         }
 
     }
@@ -62,18 +64,19 @@ public class DataCollectionServiceImpl implements DataCollectionService {
     public Flux<AlbumDTO> getAlbumsFromApi() {
 
         try {
+
             Set<Album> albumList = albumService.getAlbumsFromApi();
             Set<Photo> photoList =  photoService.getPhotosFromApi();
 
             return Flux.fromIterable(albumList.stream()
                     .map(album -> AlbumMapper.mapToAlbumDto(album,
                             photoList.stream().filter(photo -> photo.getAlbumId() == album.getId())
-                                    .map(photo -> PhotoMapper.mapToPhotoDto(photo))
-                                    .collect(Collectors.toList())))
-                    .collect(Collectors.toList()));
+                                    .map(PhotoMapper::mapToPhotoDto)
+                                    .toList()))
+                    .toList());
 
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            throw new AlbumDataInternalServerErrorException();
         }
 
     }
